# tokenparity

./: .builder-heartbeat  .gitignore  .tokenparity-progress.json  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-core.yml  license-audit.yml  lint.yml  readme-grep.yml  welcome.yml
bench_results/: synthetic_v0.1.0a1.json
docs/: ARCHITECTURE.md  DUPLICATION_DECLARATIONS.md  LIMITATIONS.md  adapter_guide.md  v0.2-spec.md
scripts/: verify_step.py
src/tokenparity/: __init__.py  cli.py  engine.py
src/tokenparity/_estimators/: __init__.py  kraskov.py
src/tokenparity/adapters/: __init__.py  protein_mock.py  robot_mock.py  video_mock.py
src/tokenparity/axes/: __init__.py  ib.py  reconstruction.py  transfer.py
src/tokenparity/core/: __init__.py  types.py
src/tokenparity/safety/: __init__.py  honest_gate.py
tests/: test_adapters.py  test_axes.py  test_cli.py  test_cli_integration.py  test_engine.py  test_grid_no_scalar_fusion.py  test_honest_gate.py  test_kraskov.py  test_property_based.py  test_readme_grep_fires.py  test_safety.py  test_types.py
