[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tokenparity"
version = "0.1.0a1"
description = "GPU-free cross-modality tokenizer parity harness (protein structure / video / robotics) on 3 honest axes. Apache-2.0, synthetic + cached-token only in v0.1.0a1."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "hinanohart"}]
keywords = ["tokenizer", "evaluation", "benchmark", "cpu-only", "multimodal", "protein", "video", "robotics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
protein = ["biotite>=0.40"]
video = ["av>=12.0"]
robot = ["lerobot>=0.1"]
viz = ["matplotlib>=3.8"]
# Non-commercial extras (license-isolated, NOT installed by default)
esm3-extras = []  # CC-BY-NC-4.0 — user must add esm-from-source themselves
video-extras = []  # NVIDIA Cosmos ToU — user opt-in
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-licenses>=4.0",
]

[project.scripts]
tokenparity = "tokenparity.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/tokenparity"
Issues = "https://github.com/hinanohart/tokenparity/issues"
Repository = "https://github.com/hinanohart/tokenparity"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenparity"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=tokenparity --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/tokenparity"]
